# cpp-working-suite

./: .gitignore  CMakeLists.txt  DataTests.cpp  Main.cpp  README.md  data.cpp  main.cpp
src/: CMakeLists.txt  Data.cpp  Data.h
test/: CMakeLists.txt  DataTests.cpp
